# spacesniff

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
npm/spacesniff/: package.json
scripts/: banner-template.html  build-npm.mjs  generate-banner.mjs
src/: fmt_util.rs  main.rs  output.rs  scan.rs
