[package]
name = "spacesniff"
version = "0.1.3"
edition = "2021"
description = "Agent-first disk space analyzer: blazing-fast parallel scans with compact, machine-readable output"
license = "MIT"
repository = "https://github.com/shuakami/spacesniff"
keywords = ["disk", "du", "cli", "agent", "space"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

[profile.release]
lto = true
codegen-units = 1
strip = true
